Fix overlapped images by adding bg color to each swiper slider container

--- a/leblanc/components/Archives/ArchiveSlider/ArchiveSlider.module.css
+++ b/leblanc/components/Archives/ArchiveSlider/ArchiveSlider.module.css
@@ -5,6 +5,9 @@
   }
 }
 
+.swiperSlide {
+  @apply bg-white;
+}
 .slideshowContainer {
   @apply flex;
   @apply relative w-full;
@@ -56,6 +59,9 @@
     }
   }
   & .credits {
+    @apply bg-black;
+  }
+  & .swiperSlide {
     @apply bg-black;
   }
 }
